added typed js for home page

--- a/index-style.css
+++ b/index-style.css
@@ -76,6 +76,10 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+.hello {
+  color: var(--orange);
+}
+
 .name {
   color: var(--ruby);
   font-family: "Montserrat", sans-serif;
