--- a/src/profile.css
+++ b/src/profile.css
@@ -133,6 +133,49 @@ h2 {
   margin-bottom: 5rem;
 }
 
+.tech {
+  display: flex;
+  justify-content: center;
+}
+
+.icon {
+  width: 5rem;
+  height: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1.5rem 0 0;
+  opacity: 0.7;
+}
+
+.java img {
+  width: 3rem;
+}
+
+.js img,
+.html img,
+.css img {
+  width: 2.5rem;
+}
+
+.icon:hover {
+  opacity: 1;
+  transform: scale(1.3);
+  transition: all 0.2s;
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -ms-transition: all 0.2s;
+  -o-transition: all 0.2s;
+}
+
+.icon:active {
+  transform: rotate(-10deg);
+  -webkit-transform: rotate(-10deg);
+  -moz-transform: rotate(-10deg);
+  -ms-transform: rotate(-10deg);
+  -o-transform: rotate(-10deg);
+}
+
 .hobbies {
   color: var(--white);
   font-family: "Montserrat", sans-serif;
