--- a/src/profile.css
+++ b/src/profile.css
@@ -159,21 +159,43 @@ h2 {
 }
 
 .icon:hover {
+  animation: bounce 0.4s;
   opacity: 1;
-  transform: scale(1.3);
-  transition: all 0.2s;
-  -webkit-transition: all 0.2s;
-  -moz-transition: all 0.2s;
-  -ms-transition: all 0.2s;
-  -o-transition: all 0.2s;
+  -webkit-animation: bounce 0.4s;
+}
+
+@keyframes bounce {
+  20% {
+    transform: translateY(5px);
+    -webkit-transform: translateY(5px);
+    -moz-transform: translateY(5px);
+    -ms-transform: translateY(5px);
+    -o-transform: translateY(5px);
+  }
+
+  60% {
+    transform: translateY(-20px) scale(1.3);
+    -webkit-transform: translateY(-20px) scale(1.3);
+    -moz-transform: translateY(-20px) scale(1.3);
+    -ms-transform: translateY(-20px) scale(1.3);
+    -o-transform: translateY(-20px) scale(1.3);
+  }
+
+  90% {
+    transform: translateY(15px);
+    -webkit-transform: translateY(15px);
+    -moz-transform: translateY(15px);
+    -ms-transform: translateY(15px);
+    -o-transform: translateY(15px);
+  }
 }
 
 .icon:active {
-  transform: rotate(-10deg);
-  -webkit-transform: rotate(-10deg);
-  -moz-transform: rotate(-10deg);
-  -ms-transform: rotate(-10deg);
-  -o-transform: rotate(-10deg);
+  transform: scale(0.9) translateY(10px);
+  -webkit-transform: scale(0.9) translateY(10px);
+  -moz-transform: scale(0.9) translateY(10px);
+  -ms-transform: scale(0.9) translateY(10px);
+  -o-transform: scale(0.9) translateY(10px);
 }
 
 .hobbies {
