--- a/src/profile.css
+++ b/src/profile.css
@@ -84,7 +84,7 @@ body {
 
 /* main */
 main {
-  margin-top: 3rem;
+  margin-top: 5rem;
 }
 
 a {
@@ -285,6 +285,10 @@ h2 {
 
 /* media queries */
 @media only screen and (max-width: 600px) {
+  main {
+    margin-top: 2rem;
+  }
+
   .header {
     flex-direction: column;
     text-align: center;
