--- a/src/profile.css
+++ b/src/profile.css
@@ -85,6 +85,7 @@ body {
 /* main */
 main {
   margin-top: 5rem;
+  font-family: "Montserrat", sans-serif;
 }
 
 a {
@@ -101,11 +102,15 @@ a:hover {
   align-items: center;
   justify-content: center;
   margin-bottom: 5rem;
+  color: var(--white);
+}
+
+.header .underline {
+  margin-top: -0.2rem;
 }
 
 .header h1 {
   color: var(--ruby);
-  font-family: "Montserrat", sans-serif;
   font-weight: 800;
 }
 
@@ -294,12 +299,18 @@ h2 {
     text-align: center;
   }
 
+  .header-desc {
+    margin-top: 1.5rem;
+    font-size: 1rem !important;
+  }
+
   .header img {
     margin-bottom: 2rem;
   }
 
   .about {
     padding: 0 1.5rem 0;
+    font-size: 0.92rem;
   }
 }
 
