--- a/src/profile.css
+++ b/src/profile.css
@@ -292,7 +292,7 @@ h2 {
 }
 
 /* The Modal (background) */
-.modal {
+/* .modal {
   display: none;
   position: fixed;
   z-index: 1;
@@ -302,10 +302,10 @@ h2 {
   overflow: auto;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
-}
+} */
 
 /* Modal Content */
-.modal-content {
+/* .modal-content {
   background-color: #fefefe;
   margin: auto;
   padding: 0.5rem 2rem 2rem;
@@ -319,10 +319,10 @@ h2 {
 
 .close-btn {
   text-align: end;
-}
+} */
 
 /* The Close Button */
-.close {
+/* .close {
   color: #aaaaaa;
 
   font-size: 2.5rem;
@@ -339,7 +339,7 @@ h2 {
   -moz-transform: scale(1.2);
   -ms-transform: scale(1.2);
   -o-transform: scale(1.2);
-}
+} */
 /* end of main */
 
 /* media queries */
