--- a/src/projects.css
+++ b/src/projects.css
@@ -17,6 +17,10 @@ body {
   font-family: var(--montserrat);
 }
 
+.active {
+  color: var(--white) !important;
+}
+
 /* navbar */
 .navbar {
   background-color: var(--dark) !important;
@@ -68,6 +72,20 @@ body {
 /* main */
 main {
   margin-top: 5rem;
+  font-family: "Montserrat", sans-serif;
+  animation: fadeIn ease 0.3s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  -webkit-animation: fadeIn ease 0.3s;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .row {
