fixed minor navbar margin problem

--- a/src/profile.css
+++ b/src/profile.css
@@ -353,3 +353,9 @@ h2 {
     margin-bottom: 2rem;
   }
 }
+
+@media only screen and (max-width: 991.5px) {
+  .navbar-nav {
+    margin: 0 !important;
+  }
+}
