--- a/src/projects.css
+++ b/src/projects.css
@@ -166,3 +166,9 @@ main a {
     margin: 0 1rem;
   }
 }
+
+@media only screen and (max-width: 991.5px) {
+  .navbar-nav {
+    margin: 0 !important;
+  }
+}
